Fix for header mis-alignment CH

--- a/carolina_herrera/style.css
+++ b/carolina_herrera/style.css
@@ -1,41 +1,54 @@
-.ch-namespace header.mobile div.inner { padding: 0 20px !important; }
-.ch-namespace .mini ~ main {
-    margin-top: 50px;
+.ch-namespace header.mobile div.inner {
+  padding: 0 20px !important;
+}
+
+.ch-namespace .mini~main {
+  margin-top: 50px;
+}
+
+@media screen and (max-width: 1200px) and (min-width: 1024px) {
+  .ch-namespace header.desktop nav section#main div#secondary section#sub-menu-fragrance ul.header-sub-fragrance {
+    width: auto;
+  }
 }
 
 .ch-namespace header.desktop nav section#main div#secondary section ul ul.sub-menu li.menu-item {
-    padding-bottom: 8px;
-    margin: 0 0 0 0;
-    width: 150px;
+  padding-bottom: 8px;
+  margin: 0 0 0 0;
+  width: 150px;
 }
-.ch-namespace header.desktop nav section#main div#secondary section ul.header-sub-fashion{
-    display: inline-flex;
-    margin: 0 auto;
+
+.ch-namespace header.desktop nav section#main div#secondary section ul.header-sub-fashion {
+  display: inline-flex;
+  margin: 0 auto;
+}
+
+.ch-namespace header.desktop nav section#main div#secondary section ul {
+  max-width: 100%;
 }
 
 .bw-display-layer .footer {
   display: none;
 }
+
 .bw-display-layer .bwt-index-filter-list.bwt-hidden {
   display: block !important;
 }
-.bwt-types-container,
-.bw-display-layer label.hidden,
-.bwt-upcoming-event-container,
-.bwt-index-store-events-and-services,
-.bwt-sub-nav.bwt-hide-on-mobile * {
+
+.bwt-types-container, .bw-display-layer label.hidden, .bwt-upcoming-event-container, .bwt-index-store-events-and-services, .bwt-sub-nav.bwt-hide-on-mobile * {
   display: none !important;
 }
+
 .bwt-features-and-services-container {
   width: 100% !important;
 }
 
 .bwt-index-filters-toggle {
-    display: none !important;
+  display: none !important;
 }
 
-@media only screen and (max-width: 640px){
-   .bw-display-layer .bwt-filters li {
+@media only screen and (max-width: 640px) {
+  .bw-display-layer .bwt-filters li {
     width: 100% !important;
   }
 }
